<resources>
    <string name="app_name">Inzynierka</string>
    <string name="report_title">Tytuł</string>
    <string name="date">Data</string>
    <string name="photo_description">Opis zdjęcia</string>
    <string name="add_photo">Dodaj zdjęcie</string>
    <string name="cancel">Anuluj</string>
    <string name="add">Dodaj</string>
    <string name="localization">Lokalizacja</string>
    <string name="photo_desccription">Główne zdjęcie relacji</string>
    <string name="no_image_text">Dodaj swoje pierwsze zdjecie</string>
    <string name="Description">Opis</string>
    <string name="photos">Zdjęcia</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sort">Sortuj</string>
    <string name="filtr">Filtr</string>
    <string name="search_tooltip">Podaj tytuł</string>
    <string name="search_tooltip2">Wyszukaj po tytule...</string>
    <string name="edit">Edytuj</string>
    <string name="delete">Usuń</string>
    <string name="addReportAlertDialog">Czy chcesz anulować dodawanie relacji?</string>
    <string name="ok">OK</string>
    <string name="addReportTitle">Dodaj relacje</string>
    <string name="editReportTitle">Edytuj relacje</string>
    <string name="editReportAlertDialog">"Czy chcesz anulować edycje relacji?</string>
    <string name="deleteReportTitle">Usuń relacje</string>
    <string name="deleteReportAlertDialog">Czy chcesz usunąć relację?</string>
    <string name="add_first_report">Nie masz jeszcze żadnych relacji. Dodaj swoją pierwszą relację.</string>
    <string name="maxPhotosAmount">Podaj maksymalna liczbę zdjęć</string>
    <string name="minPhotosAmount">Podaj minimalna liczbę zdjęć</string>
    <string name="customDate">Wybierz własną datę</string>
    <string name="pickDate">Wybierz datę</string>
    <string name="pickTitle">Wpisz tytuł relacji</string>
    <string name="filter_activated">Filtr jest aktywny.</string>
    <string name="filter_empty_result">Nie znaleziono żadnych relacji o określonym filtrze</string>
    <string name="fromGallery">Dodaj zdjęcie z galerii</string>
    <string name="from_camera">Dodaj zdjęcie z aparatu</string>
    <string name="title_activity_maps">Map</string>
</resources>
