<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reportAddRecyclerViewPhotos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/grid_spacer1"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo_description_layout" />
    <Button
        android:id="@+id/reportAddButtonAddPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/grid_spacer1"
        android:drawableRight="@drawable/camera_icon"
        android:onClick="addPhotos"
        android:text="@string/add_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/localization_layout" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/photo_description_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/grid_spacer1"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reportAddImageViewMainPhoto">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addReportEditTextPhotoDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/photo_description" />
    </com.google.android.material.textfield.TextInputLayout>
    <ImageView
        android:id="@+id/reportAddImageViewMainPhoto"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/grid_spacer1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/photo_desccription"
        android:scaleType="centerInside"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reportAddButtonAddPhoto"
        tools:srcCompat="@tools:sample/avatars" />
</androidx.constraintlayout.widget.ConstraintLayout>
