<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffc046"
    tools:context=".Report.ListOfReports.ListOfReportsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/listReportTopBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/reportsListTVFilterActivated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_activated"
                android:textColor="#000000"
                android:textSize="18sp"
                android:layout_margin="8dp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/ListReportFiltrAndSortButtonsLayout"
                style="@style/Widget.AppCompat.ButtonBar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/listOfReportsFiltrButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#000000"
                    android:background="#ff8f00"
                    android:textSize="14sp"
                    android:layout_margin="8dp"
                    android:drawableLeft="@drawable/ic_filter_list_black_24dp"
                    android:text="@string/filtr" />

                <Button
                    android:id="@+id/listOfReportsSortButton"
                    android:layout_width="fill_parent"
                    android:textSize="14sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:background="#ff8f00"
                    android:textColor="#000000"
                    android:drawableLeft="@drawable/ic_sort_black_24dp"
                    android:text="@string/sort" />
            </LinearLayout>

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/listOfReportsNoImageLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/big_image"
                        app:srcCompat="@drawable/noimge" />

                    <TextView
                        android:id="@+id/listOfReportsNoReportTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:textSize="28sp"
                        android:layout_margin="8dp"
                        android:text="@string/add_first_report" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/listOfReportsRecyclerViewLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/listOfReportsNoImageLayout">



                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/listReportRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbars="vertical">

                    </androidx.recyclerview.widget.RecyclerView>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addReportFloatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end|bottom"
        android:clickable="true"
        android:padding="10dp"
        android:focusable="true"
        android:gravity="end"
        android:scaleType="center"
        android:backgroundTint="#ff8f00"
        android:src = "@drawable/ic_add_black_24dp" />

</RelativeLayout>